<resources>
    <string name="app_name">Quetzalli</string>
    <string name="default_web_client_id">226791460010-qqnagc53dtmus10mjfunlb3u1qvtar9n.apps.googleusercontent.com</string>
    <string name="opcion_1">Sesión</string>
    <string name="opcion_2">Avance</string>
    <string name="opcion_3">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento_sesion">fragmento sesión</string>
    <string name="fragmento_profile">fragmento de perfil</string>
    <string name="fragmento_avance">fragmento de avance</string>
    <string name="help">Estamos aquí para ayudarte</string>
    <string name="FAQ">Preguntas Frecuentes</string>
    <string name="question_name">Pregunta 1</string>
    <string name="ic_expand">icono de expandir</string>
    <string name="question_description">Descripción</string>
    <string name="logo">icono de quetzalli</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="slogan">\"Entrena tu cerebro\"</string>
    <string name="sign_in_with_google">Iniciar Sesión con Google</string>
    <string name="complete_register">Completa tu registro</string>
    <string name="about_you">Cuéntanos más sobre ti</string>
    <string name="name">*Nombre</string>
    <string name="genere">Género</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="other">Otro</string>
    <string name="date">Fecha de Nacimiento</string>
    <string name="ocupation">Ocupación</string>
    <string name="next">Siguiente</string>
    <string name="content_description_end_icon">Icono de calendario</string>
    <string name="Rnotificaciones">Recibir Notificaciones</string>
    <string name="Pnotificaciones">Programar Notificaciones</string>
    <string name="DesRecibir">No dejes fuera tu salud, nosotros te recordaremos cada dia tus pruebas </string>
    <string name="DesProgramar">Programa tus notificaciones para que te recordemos tus pruebas</string>
    <string name="datos_perso">Datos personales</string>
    <string name="cambiar_tus">Cambiar tus datos personales.</string>
    <string name="label_name">Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="g_nero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="ocupaci_n">Ocupación</string>
    <string name="fecha_de_na">Fecha de nacimiento</string>
    <string name="contrase_a">Contraseña</string>
    <string name="guardar_c">Guardar cambios</string>
    <string name="photo_user">Fotografía de usuario</string>
    <string name="go_session">Ponte a prueba</string>
    <string name="instructions">Las pruebas permiten medir sus puntos débiles y fuertes que más adelante podrá consultar en el apartado de avance.</string>
    <string name="start">Empezar</string>
    <string name="duration">"Duración: Aproximadamente \n4 minutos con 30 segundos</string>
    <string name="detalles">Más detalles</string>
    <string name="descripcion_loading">Estamos procesando sus resultados</string>
    <string name="waiting">Espere</string>
    <string name="Hello_user">¡Hola, %1$s!</string>
    <string name="Support">Soporte</string>
    <string name="btn_update_profile">Cambiar datos personales</string>
    <string name="terms_of_condition">Politicas de privacidad</string>
    <string name="Help">Ayuda</string>
    <string name="Comments">Comentarios</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="btn_delete_ac">Eliminar la cuenta</string>
    <string name="delete">Eliminar</string>
    <string name="comentarios">Tus comentarios son importantes para nosotros</string>
    <string name="comentarios_message">¿Desea enviar un comentario?</string>
    <string name="accept">Enviar</string>
    <string name="decline">Cancelar</string>
    <string name="delete_account">¿Desea eliminar su cuenta?</string>
    <string name="delete_account_message">Esta acción no se puede deshacer</string>
    <string name="hint_comentarios">Escribe aquí</string>
    <string name="page_title">""</string>
    <string name="content_description_favorite">Icono de campana</string>
    <string name="campana">Notificaciones</string>
    <string name="Inicio">Entrena con Quetzalli</string>
    <string name="Avance">Avance</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="data_personal">Datos Personales</string>
    <string name="policy">Políticas de privacidad</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="pnotificaciones">Programar notificaciones</string>
    <string name="ic_test">Icono de test</string>
    <string name="compartir">Icono de compartir</string>
    <string name="date_program">Fecha del recordatorio</string>
    <string name="time_program">Hora del recordatorio</string>
    <string name="selected_time">%1$s:%2$s</string>
    <string name="program">Guardar</string>
    <string name="Introductory">Introducción</string>
    <string name="Policy">Fecha de entrada en vigencia: (sujeto a aprobación)\n\n1. Información Recopilada:\n\n    - Recopilamos datos personales como nombre y correo electrónico al crear una cuenta, y resultados de pruebas cognitivas para alertas preliminares y monitoreo.\n\n2. Uso de la Información:\n\n    - Utilizamos la información para proporcionar alertas preliminares basadas en pruebas cognitivas y mejorar la funcionalidad de la aplicación.\n\n3. Compartir Información:\n\n    - Compartimos resultados con profesionales de la salud si el usuario lo solicita, y con colaboradores para mejorar nuestros servicios.\n\n4. Seguridad:\n\n    - Implementamos medidas de seguridad para proteger la información personal.\n\n5. Acceso y Control:\n\n    - Los usuarios tienen derecho a acceder, corregir y solicitar la eliminación de sus datos personales.\n\n6. Terceros:\n\n    - Utilizamos servicios de terceros con acuerdos de confidencialidad para análisis y procesamiento de datos.\n\n7. Cambios en la Política:\n\n    - Nos reservamos el derecho de modificar esta política, notificando cambios a través de la aplicación.\n\n8. Contacto:\n\n    - Para preguntas o inquietudes, contáctanos a través de [correo electrónico de contacto].\n\nGracias por confiar en \"Quetzalli\". Tu privacidad es importante para nosotros.</string>
    <string name="avance_title">Su perfil de rendimiento</string>
    <string name="avance_description">Cada semana podrá consultar sus resultados en la parte inferior por cada prueba. \nActualizado el: %1$s</string>
    <string name="share_to">"Compartir imagen usando"</string>
    <string name="OptionA">a)</string>
    <string name="OptionB">b)</string>
    <string name="OptionC">c)</string>
    <string name="OptionD">d)</string>
    <string name="OptionE">e)</string>
    <string name="test_memory">Memoria</string>
    <string name="Countdown">3</string>
    <string name="right_now">¡Comienza!</string>
    <string name="InstructionsMem">Seleccione la respuesta que considere correcta:</string>
    <string name="ingresaUbicacion">Ingrese la fecha de hoy</string>
    <string name="enviarUbicacion">Enviar</string>
    <string name="ingresarRespuesta">Ingrese su respuesta</string>
    <string name="siguienteCalculo">Siguiente</string>
    <string name="format_date">00/00/0000</string>
    <string name="test_calculation">Atención y Cálculo</string>
    <string name="test_spatial">Espacio-Temporal</string>
    <string name="ask_neurodegenerative">¿Tienes algún familiar que padezca de una enfermedad neurodegenerativa (Huntingtong, Alzheimer, Parkinson, ELA, entre otras)?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="terms">"Bienvenido/a a \"Quetzalli\", la aplicación diseñada para brindar herramientas de detección temprana y monitoreo continuo de la salud cognitiva. Al utilizar esta aplicación, aceptas los siguientes términos y condiciones. Si no estás de acuerdo con estos términos, por favor, no utilices la aplicación.\n
1. Uso Adecuado:\n
    - \"Quetzalli\" es exclusivamente para uso personal y no debe considerarse como un sustituto del asesoramiento médico profesional. Los usuarios son responsables de interpretar y actuar según la información proporcionada por la aplicación.\n
2. Privacidad:\n
    - La privacidad de nuestros usuarios es una prioridad. La información recopilada, incluyendo datos personales y resultados de pruebas cognitivas, se manejará de acuerdo con nuestra Política de Privacidad. Al utilizar la aplicación, aceptas los términos de nuestra Política de Privacidad.\n
3. Detección Temprana y Alertas Preliminares:\n
    - \"Quetzalli\" proporciona alertas preliminares basadas en pruebas cognitivas, pero no reemplaza el diagnóstico profesional. Los usuarios deben buscar siempre la evaluación y el asesoramiento de un profesional de la salud para un diagnóstico preciso.\n
4. Responsabilidad del Usuario:\n
    - Los usuarios son responsables de la exactitud de la información proporcionada y de seguir las recomendaciones de búsqueda de atención médica cuando se emiten alertas preliminares.\n
5. Uso de Tecnología de IA:\n
    - \"Quetzalli\" utiliza modelos de aprendizaje automático y procesamiento del lenguaje natural para analizar respuestas y detectar posibles anomalías cognitivas. El rendimiento de la aplicación puede variar y no se garantiza la detección precisa en todos los casos.\n
6. Actualizaciones y Mejoras:\n
    - Nos reservamos el derecho de realizar actualizaciones y mejoras en la aplicación para mejorar la funcionalidad y la precisión de las pruebas cognitivas.\n
7. Cambios en los Términos y Condiciones:\n
    - Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Los cambios se notificarán a los usuarios a través de la aplicación. El uso continuado de la aplicación después de dichos cambios constituye la aceptación de los nuevos términos.\n
8. Ley Aplicable:\n
    - Estos términos y condiciones se rigen por las leyes del México y cualquier disputa estará sujeta a la jurisdicción exclusiva de los tribunales de la Ciudad de México.Gracias por utilizar \"Quetzalli\"."</string>
    <string name="btn_finish">Enviar</string>
    <string name="name_test">Prueba X</string>
    <string name="test_location">Prueba Ubicacion espacio temporal</string>
    <string name="test_location_instructions">Coloque la fecha actual en la que se encuentra y de clic en el botón enviar</string>
    <string name="test_location_duration">Aprox. 30 segundos</string>
    <string name="test_mem">Prueba de memoria</string>
    <string name="test_mem_instructions">En la siguiente prueba se mostrarán 2 secuencias gráficas, presione la opción que considere correcta</string>
    <string name="test_mem_duration">Aprox. 1 minuto</string>
    <string name="test_calc">Prueba de atención y cálculo</string>
    <string name="test_calc_instructions">Se presentan 4 operaciones en donde deberá de colocar su respuesta en el cuadro de texto, finalmente pulse el botón enviar</string>
    <string name="test_calc_duration">Aprox. 1 minuto</string>
    <string name="results_view">Ver resultados</string>
    <string name="title_test">Título de gráfica</string>
    <string name="save">Guardar</string>
    <string name="interpretacion">Cada punto mostrado es por día, para comprender la gráfica presentada se establece que aquellos puntos donde usted tenga un mayor retardo asi como si el puntaje decae drásticamente, estarán siendo evaluados por la IA asi como otros parámetros para determinar en que momento es necesario acudir con un especialista</string>
</resources>