<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.RegisterFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_complete_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sansation_light"
            android:text="@string/complete_register"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image_register"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_complete_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotoslab_extralight"
            android:text="@string/about_you"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/seed"
            app:boxStrokeColor="@color/seed"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_you">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:required="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotoslab_bold"
            android:text="@string/genere"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name" />

        <RadioGroup
            android:id="@+id/rg_genere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_genere">

            <RadioButton
                android:id="@+id/rd_female"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/rd_male"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/other" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/seed"
            app:boxStrokeColor="@color/seed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar"
            app:errorEnabled="true"
            app:endIconTint="@null"
            app:endIconContentDescription="@string/content_description_end_icon"
            app:layout_constraintTop_toBottomOf="@+id/rg_genere">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="date"
                android:required="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ocupation"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/seed"
            app:boxStrokeColor="@color/seed"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_date">

            <AutoCompleteTextView
                android:id="@+id/et_ocupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ocupation"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/seed"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/til_ocupation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/seed"
            android:text="@string/next"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_terms_and_conditions"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>