<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.views.UbicacionTest"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaUbicacion"
        app:errorEnabled="true"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconTint="@null"
        app:endIconContentDescription="@string/content_description_end_icon"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:required="true"
            android:inputType="date"
            android:gravity="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enviarUbicacion"
        style="@style/Widget.Material3.Button" />

</LinearLayout>

