<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/sansation_light"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:fontFamily="@font/robotoslab_extralight"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/md_theme_light_shadow"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>